--- a/src/App/resources.qrc
+++ b/src/App/resources.qrc
@@ -1,5 +1,8 @@
 <RCC>
     <qresource prefix="/">
+        <file>Models/chess.glb</file>
+    </qresource>
+    <qresource prefix="/">
         <file>Textures/voronoi.png</file>
     </qresource>
     <qresource prefix="/">
